--- a/index.html
+++ b/index.html
@@ -1,16 +1,85 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Great Idea - Responsive I</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <div class="container">
+        <header>
+            <div class="head">
+                <nav>
+                    <a href="services.html">Services</a>
+                    <a href="product.html">Product</a>
+                    <a href="#vision">Vision</a>
+                    <a href="#features">Features</a>
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+                <div class="head-img">
+                    <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+                </div>
+            </div>
+            <div class="head-main">
+                <div class="header">
+                    <h1> Innovation<br> On<br> Demand</h1>
+                    <p class="button">Get Started</p>
+                </div>
+                <img src="img/header-img.png" alt="Image of a code snippet.">
+            </div>
+        </header>
+
+        <section class="upper-content">
+            <div class="features">
+                <h2>Features</h2>
+                <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+            <div class="about">
+                <h2>About</h2>
+                <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+        </section>
+
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+        <section class="lower-content">
+            <div class="services">
+                <h2>Services</h2>
+                <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+            <div class="product">
+                <h2>Product</h2>
+                <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+            <div class="vision">
+                <h2>Vision</h2>
+                <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+        </section>
+        <div class="contact">
+            <h2>Contact</h2>
+            <p>123 Way 456 Street<br> Somewhere, USA</p><br>
+            <p>1 (888) 888-8888</p> <br>
+            <p>sales@greatidea.io</p> <br>
+        </div>
+    </div>
+
+    <footer>
+        Copyright Great Idea! 2018
+    </footer>
 </body>
+
 </html>
